@@ -13,6 +13,9 @@ A Classic Fairytale:
  + Mission 3: Display number of turns left at timed parcours
  * Fix incorrect storytelling in mission descriptions
 
+Lua API:
+ + New call: WriteLnToChat(string): Add a line in the chat
+
 ====================== 0.9.23 ======================
 HIGHLIGHTS:
  + Battalion style
